--- a/src/jamtaba/resources/jamtaba.css
+++ b/src/jamtaba/resources/jamtaba.css
@@ -300,18 +300,30 @@ BaseTrackView[unlighted="true"] QSlider::add-page:vertical{
 
 BaseTrackView #peaksDbLabel{
     border-radius: 2px;
-    border: 1px inset rgb(90,90,90);
-    background-color: rgba(0, 0, 0, 20);
+    border: 1px inset rgb(105,105,105);
+    background-color: rgba(0, 0, 0, 10);
     font-size: 8px;
     qproperty-alignment: AlignCenter;
-    color: rgb(70,70,70);
+    color: rgba(0,0,0, 90);
     padding: 1px;
+}
+NinjamTrackView #peaksDbLabel{
+    border: 1px inset rgb(95,95,95);
+}
+
+
+BaseTrackView[unlighted="true"] #peaksDbLabel,
+BaseTrackView[unlighted="true"] #muteButton,
+BaseTrackView[unlighted="true"] #soloButton{
+   border: none;
 }
 
 BaseTrackView #peaksDbLabel:hover{
     background-color: rgba(255,255,255, 30);
     color: black;
 }
+
+
 
 QSlider::add-page:vertical{
     background: rgb(255,255,255, 120);
@@ -385,14 +397,14 @@ NinjamPanel QSlider::groove:horizontal{
 
 /* +++++++++++++++++++++++++++++++++++++++++++ */
 PeakMeter{
-    background-color: rgba(0, 0, 0, 140);
-    border: 1px solid rgba(0, 0, 0, 25);
+    background-color: rgba(0, 0, 0, 10);
+    border: 1px inset rgba(0, 0, 0, 15);
     max-width: 5px;
     min-width: 5px;
-    border-radius: 1px;
+    border-radius: 2px;
 }
 BaseTrackView[unlighted="true"] PeakMeter{
-    background-color: rgba(0, 0, 0, 20);
+    background-color: rgba(0, 0, 0, 15);
     /*border: none;*/
 }
 
@@ -713,7 +725,17 @@ QPushButton[enabled="false"]{
 }
 
 QPushButton#soloButton, QPushButton#muteButton{
-font-size: 10px;
+    font-size: 9px;
+    border-color: rgb(110,110,110);
+    padding: 2px;
+    padding-left: 3px;
+    padding-right: 3px;
+    color: rgb(50,50,50);
+}
+
+NinjamTrackView #soloButton, NinjamTrackView #muteButton{
+   border-color: rgb(95,95,95);
+   color: rgb(40,40,40);
 }
 
 QPushButton:hover#soloButton, QPushButton:hover#muteButton{
@@ -795,7 +817,7 @@ LocalTrackGroupView   #toolButton:hover{
 /* ++++++++++++++++++++++++++++++++++ */
 
 BaseTrackView .QLabel#labelPanR, BaseTrackView .QLabel#labelPanL{
-color: rgba(0, 0, 0, 80);
+color: rgba(0, 0, 0, 60);
 }
 
 BaseTrackView > .QFrame#topSeparator{
