--- a/src/jamtaba/resources/jamtaba.css
+++ b/src/jamtaba/resources/jamtaba.css
@@ -598,11 +598,10 @@ BusyDialog > QLabel{
 
 JamRoomViewPanel{
     background-color: rgb(220, 220, 220);
-    border: 1px outset rgb(110, 110, 110);
-    /*
-    border-top: 1px solid rgba(0, 0, 0, 60);
-    border-left: 1px solid rgba(0, 0, 0, 60);
-    */
+    border: 1px solid rgb(230,230,230);
+    border-bottom: 1px solid rgb(167, 167, 167);
+    border-right: 1px solid rgb(180,180,180);
+
     border-radius: 3px;
     padding: 1px;
 }
@@ -614,7 +613,7 @@ JamRoomViewPanel #content{
             stop:1 rgba(0, 0, 0, 0));
     border: none;
     margin: 1px;
-    border-top: 1px solid rgb(196, 196, 196);
+    border-top: 1px solid rgb(181,181,181);
 
 }
 
