--- a/Client/src/jamtaba/gui/ChatMessagePanel.ui
+++ b/Client/src/jamtaba/gui/ChatMessagePanel.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>308</width>
-    <height>135</height>
+    <width>239</width>
+    <height>39</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+   <sizepolicy hsizetype="Preferred" vsizetype="MinimumExpanding">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
@@ -63,16 +63,16 @@
      </property>
     </widget>
    </item>
-   <item>
+   <item alignment="Qt::AlignTop">
     <widget class="QLabel" name="labelMessage">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-       <horstretch>0</horstretch>
+      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+       <horstretch>1</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="text">
-      <string>message</string>
+      <string>bit chat message with many lines to test the behavior</string>
      </property>
      <property name="textFormat">
       <enum>Qt::RichText</enum>
