--- a/Client/src/jamtaba/resources/jamtaba.qrc
+++ b/Client/src/jamtaba/resources/jamtaba.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/style">
         <file>jamtaba.css</file>
+        <file>jamtaba_orange.css</file>
     </qresource>
     <qresource prefix="/images">
         <file>gradient.bmp</file>
