--- a/Client/src/jamtaba/gui/mainframe.ui
+++ b/Client/src/jamtaba/gui/mainframe.ui
@@ -20,7 +20,7 @@
    <string notr="true">Jamtaba</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../resources/jamtaba.qrc">
+   <iconset>
     <normaloff>:/images/jt_0001.png</normaloff>:/images/jt_0001.png</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
@@ -218,7 +218,7 @@
               <string notr="true"/>
              </property>
              <property name="verticalScrollBarPolicy">
-              <enum>Qt::ScrollBarAlwaysOn</enum>
+              <enum>Qt::ScrollBarAsNeeded</enum>
              </property>
              <property name="horizontalScrollBarPolicy">
               <enum>Qt::ScrollBarAsNeeded</enum>
@@ -231,7 +231,7 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>694</width>
+                <width>711</width>
                 <height>674</height>
                </rect>
               </property>
@@ -355,8 +355,14 @@
     </property>
     <addaction name="actionReport_bugs_or_suggest_improvements"/>
    </widget>
+   <widget class="QMenu" name="menuThemes">
+    <property name="title">
+     <string>Themes</string>
+    </property>
+   </widget>
    <addaction name="menuPreferences"/>
    <addaction name="menuNinjam"/>
+   <addaction name="menuThemes"/>
    <addaction name="menuHelp"/>
   </widget>
   <action name="actionTest">
@@ -406,8 +412,6 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources>
-  <include location="../resources/jamtaba.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
