--- a/Client/src/jamtaba/resources/jamtaba_orange.css
+++ b/Client/src/jamtaba/resources/jamtaba_orange.css
@@ -1,6 +1,7 @@
 *{
     font-family: "Verdana";
     font-size: 11px;
+    color: black;
 }
 
 #voteButton{
@@ -35,7 +36,7 @@ QMessageBox, QInputDialog, PluginScanDialog{
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop:0 rgb(250, 250, 250),
         stop:1 rgba(180, 180, 180));
-    border-radius: 2px;
+    border-radius: 1px;
     border: 1px outset gray;
     padding: 32px;
 }
@@ -53,26 +54,27 @@ QInputDialog QPushButton{
 
 FxPanel{
     border: none;
-    background-color: none; /* rgba(0, 0, 0, 20);*/
+    background-color: rgba(0, 0, 0, 40);
     max-height: 80px;
-    border-radius: 2px;
+    border-radius: 1px;
 }
 BaseTrackView[unlighted="false"] FxPanel{
-   /*border:  1px inset rgb(100, 100, 100);*/
+   border: 1px linear rgba(0,0,0, 60);
 }
 
 FxPanelItem{
-    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1, stop:0 rgba(0, 0, 0, 30), stop:1 rgba(0, 0, 0, 50));
+    background-color: rgb(250, 225, 169) ;
     background-position: center right;
     background-repeat: none;
     max-height: 14px;
     width: 100%;
-    border-radius: 2px;
+    border-radius: 1px;
     border: none;
+
 }
 
 BaseTrackView[unlighted="false"] FxPanelItem{
-    border: 1px outset rgb(100, 100, 100);
+    border: 1px solid rgba(0, 0, 0, 20);
 }
 
 FxPanelItem[containPlugin="false"]{
@@ -85,8 +87,9 @@ FxPanelItem[containPlugin="true"]{
 FxPanelItem > QLabel{
     qproperty-alignment: AlignLeft;
     font-size: 10px;
-    color: #D3D3D3;
+    color: rgb(127, 77, 46);
     margin: 0px;
+    padding: 1px;
 }
 /* Não funcionou
 FxPanelItem[bypassed] > QLabel{
@@ -103,7 +106,7 @@ FxPanelItem > QPushButton{
      max-height: 10px;
      margin: 0px;
      padding: 0px;
-     border-radius: 2px;
+     border-radius: 1px;
      border: 1px solid rgba(0, 0, 0, 80);
      background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgba(0, 0, 0, 120), stop:1 rgb(0, 0, 0, 50));
 }
@@ -138,7 +141,7 @@ QScrollBar:vertical, QScrollBar:horizontal {
     border: 1px solid rgba(0, 0, 0, 45);
     background-color: rgba(0, 0, 0, 40);
     margin: 0px;/* 22px 0 22px 0;*/
-    border-radius: 4px;
+    border-radius: 1px;
 }
 QScrollBar:vertical{
     width: 12px;
@@ -148,7 +151,7 @@ QScrollBar:horizontal{
 }
 QScrollBar::handle:vertical, QScrollBar::handle:horizontal {
   border: 1px solid rgba(0, 0, 0, 85);
-  border-radius: 2px;
+  border-radius:1px;
   margin: 0px;
 }
 QScrollBar::handle:vertical {
@@ -217,25 +220,25 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical, QScrollBar::add-pa
 /* common widgets */
 
 .QLineEdit{
-    border-radius: 3px;
+    border-radius: 1px;
     padding: 2px;
-    background: #C5C5C5;
-    color: black;
-    border: 1px solid #B2B2B2;
+    background: #FAE1A9;
+    color: rgb(127, 77, 26);
+    border: 1px solid #E5C172;
+
 }
 
 
 .QLineEdit[enabled="false"]{
-    border-radius: 2px;
+    border-radius: 1px;
     padding: 2px;
-    background: rgb(100, 100, 100, 90);
     color: rgb(0, 0, 0);
-    border: 1px solid red;
+    border: 1px solid rgb(51, 51, 51, 70);
 }
 
 /*
 QGroupBox{
-    border-radius: 2px;
+    border-radius: 3px;
     border: 1px solid rgba(0, 0, 0, 30);
     padding-top: 24px;
 }
@@ -286,21 +289,21 @@ border-color: rgb(90, 90, 90);
 
 QSlider::add-page:vertical, QSlider::groove:vertical {
     border: 1px solid rgba(0, 0, 0, 55);
-    border-radius: 2px;
+    border-radius: 1px;
 }
 
 QSlider::groove:vertical{
-    border: 1px inset rgb(130, 130, 130);
+    border: 1px inset rgba(0,0,0,10);
 }
 
 NinjamRoomWindow TrackGroupView BaseTrackView QSlider::groove:vertical{
-    border: 1px inset rgb(140, 140, 140);
+    border: 1px inset rgb(100, 100,100);
 }
 
 QSlider::groove:horizontal{
     background-color: rgba(0, 0, 0, 30);
     height: 3px;
-    border-radius: 2px;
+    border-radius: 1px;
     border: 1px inset rgb(140, 140, 140);
 }
 
@@ -315,9 +318,9 @@ BaseTrackView[unlighted="true"] QSlider::add-page:vertical{
 }
 
 BaseTrackView #peaksDbLabel{
-    border-radius: 2px;
-    border: 1px solid rgba(0, 0, 0, 8);
-    background-color: rgba(0, 0, 0, 5);
+    border-radius: 1px;
+    border: 1px solid rgba(0, 0, 0, 3);
+    background-color: rgba(0, 0, 0, 6);
     font-size: 8px;
     qproperty-alignment: AlignCenter;
     color: rgba(0,0,0, 90);
@@ -349,16 +352,13 @@ QSlider::add-page:vertical{
 }
 
 QSlider::groove:vertical {
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-            stop: 0     #BABABA,
-            stop: 1.0   #ABABAB
-            );
+    background-color: rgba(0, 0, 0, 10);
     width: 8px;
 }
 
 BaseTrackView[unlighted="true"] QSlider::groove:vertical{
     background-color: rgba(0, 0, 0, 40);
-    border-color: rgba(0, 0, 0, 15);
+    border-color: rgba(0, 0, 0, 25);
 }
 
 
@@ -401,7 +401,7 @@ BaseTrackView[unlighted="true"] QSlider::handle:horizontal{
 NinjamPanel QSlider::groove:vertical{
     width: 5px;
     margin: 2px;
-    border-radius: 2px;
+    border-radius: 1px;
 }
 
 NinjamPanel QSlider::groove:horizontal{
@@ -413,11 +413,11 @@ NinjamPanel QSlider::groove:horizontal{
 
 /* +++++++++++++++++++++++++++++++++++++++++++ */
 PeakMeter{
-    background-color: rgba(0, 0, 0, 10);
-    border: 1px inset rgba(0, 0, 0, 15);
+    background-color: rgba(0, 0, 0, 5);
+    border: 1px inset rgba(0, 0, 0, 10);
     max-width: 5px;
     min-width: 5px;
-    border-radius: 2px;
+    border-radius: 1px;
 }
 BaseTrackView[unlighted="true"] PeakMeter{
     background-color: rgba(0, 0, 0, 15);
@@ -427,25 +427,15 @@ BaseTrackView[unlighted="true"] PeakMeter{
 /* ++++++++++++++++++++++++++++++++++++++++ */
 
 QMainWindow{
-background-color: #494949;
-    /*background-image: url(':/images/metal_texture.jpg');*/
+    background-color: #F7F7F7;
 }
 
 /* painéis principais */
 #leftPanel, #contentPanel{
-    /*background: url(:/images/gradient.bmp) repeat-x;*/
-    /*background-color: rgb(39, 39, 39);*/
-    /*background-color: red;*/
-    border: 1px solid rgb(55, 55, 55);
-    border-radius: 2px;
-}
-
-#leftPanel{
-   background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop: 0     rgba(0, 0, 0, 10),
-        stop: 1.0   rgba(0,0,0, 20));
-
-    border: 1px solid #353535;
+/*
+border: 1px solid rgb(55, 55, 55);
+    border-radius: 3px;
+    */
 }
 
 
@@ -453,7 +443,7 @@ background-color: #494949;
 .QWidget#leftPanel .QLabel#labelSectionTitle, .QWidget#contentPanel > .QLabel{
 /*font-size: 11px;*/
 
-color: rgb(190, 190, 190);
+/*color: rgb(190, 190, 190);*/
 qproperty-alignment: AlignCenter;
 }
 
@@ -468,7 +458,7 @@ background-color: rgb(100, 100, 100);
 
 QPushButton#localControlsCollapseButton{
     border: none;
-    border-radius: 0px;
+    border-radius: 1px;
     background: none;
     max-width: 6px;
     width: 6px;
@@ -494,17 +484,14 @@ QPushButton#localControlsCollapseButton::hover:checked{
 /* ------------------------------ */
 
 .QWidget#contentPanel{
-    background: transparent;
+    background: none;
     border: none;
 }
 
-#contentPanel .QTabWidget:pane{
-    background-color: #BCBCBC;
-}
-
-#contentPanel .QTabWidget:pane, #chatArea .QTabWidget:pane{
-    border: 1px solid rgba(0, 0, 0, 60);
-    border-radius: 2px;
+#contentPanel .QTabWidget:pane, #leftPanel{
+    background-color: #EFEEC2;
+    border: none;/* 1px solid #EFEEC2;*/
+    border-radius: 1px;
     padding: 0px;
 }
 
@@ -517,37 +504,36 @@ QPushButton#localControlsCollapseButton::hover:checked{
 }
 
  .QTabWidget::tab-bar {
- left: 10px; /* move to the right by 5px */
+     left: 10px; /* move to the right by 5px */
 
  }
 
 /* Style the tab using the tab sub-control. Note that
 it reads QTabBar _not_ QTabWidget */
 .QTabBar::tab {
-    background-color: rgb(180, 180, 180);
-    border: none;
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
+    background-color: #EFEEC2;
+    border: none;/* 1px solid #D0D5EA;*/
+    border-bottom: none;
+    border-radius: 1px;
     min-width: 8ex;
-    padding: 2px;
+    padding: 6px;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 11px;
+    color: black;
  }
 
  .QTabBar::tab:selected, .QTabBar::tab:hover {
-    background-color: rgb(210, 210, 210)
+    background-color: #EEEDC1;
  }
 
  .QTabBar::tab:selected {
-    border: 1px solid;
-    border-color: #9B9B9B;
-    border-bottom-color: #C2C7CB; /* same as pane color */
+
  }
 
  .QTabBar::tab:!selected {
     margin-top: 3px; /* make non-selected tabs look smaller */
-    color: rgb(90, 90, 90);
+    color: rgb(140, 140, 140);
  }
 
 /*++++++++++++++++++++*/
@@ -573,7 +559,7 @@ background: transparent;
 
 BusyDialog{
     border: 1px outset rgb(130, 130, 130);
-    border-radius: 2px;
+    border-radius: 1px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
             stop:0 rgb(255, 255, 255),
             stop:0.1 rgb(240, 240, 240)
@@ -596,20 +582,22 @@ BusyDialog > QLabel{
 
 
 JamRoomViewPanel{
-    background-color: rgb(220, 220, 220);
-    border: 1px solid rgb(230,230,230);
-    border-bottom: 1px solid rgb(167, 167, 167);
-    border-right: 1px solid rgb(180,180,180);
+    background-color: #FFC575;
+    border: none; /* 1px solid #FFC435;*/
+    border-bottom: 1px solid black;/*#E5E5E5;*/
+    border-radius: 1px;
+    padding: 0px;
+}
 
-    border-radius: 2px;
-    padding: 1px;
+JamRoomViewPanel #labelName{
+    color: rgb(127, 77, 26);
 }
 
 JamRoomViewPanel #content{
-    background-color: rgb(253, 253, 253);
-    border: none;
-    margin: 1px;
-    border-top: 1px solid rgb(181,181,181);
+    background-color: #F9F9F9;
+    border: 1px solid #E2DAD0;
+    border-top: none;
+    margin: 0px;
 
 }
 
@@ -620,7 +608,7 @@ JamRoomViewPanel #labelName{
 
 JamRoomViewPanel  #labelRoomStatus, JamRoomViewPanel  #labelRoomType{
     font-size: 10px;
-    color: rgb(90, 90, 90);
+    color: rgba(0, 0, 0, 60);
 }
 JamRoomViewPanel  #labelRoomType{
     margin-right: 3px;
@@ -630,7 +618,7 @@ JamRoomViewPanel  #labelRoomType{
 /*+++++++++++++++++++++++++++++++*/
 
 #xmitButton{
-    border-radius: 2px;
+    border-radius: 1px;
     border-width: 1px;
     font-size: 11px;
     padding-top: 3px;
@@ -667,16 +655,13 @@ JamRoomViewPanel  #labelRoomType{
 
 /*  Track view +++++++++++++++++++++++++++++++++++++++++++++++ */
 BaseTrackView{
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop:0 rgb(200, 200, 200),
-        stop:0.01 rgb(240, 240, 240),
-        stop:1 rgb(140, 140, 140)
-    );
-   border: 1px solid rgb(61,61,61);
-   border-radius: 0px;
-   border-bottom-left-radius: 2px;
-   border-bottom-right-radius: 2px;
+   background: #FFFBF4;
+   border: none;/* 1px solid red;*/
+   border-radius: 1px;
+   border-bottom-left-radius: 3px;
+   border-bottom-right-radius: 3px;
    font-size: 8px; /*db value */
+   padding: 1px;
 }
 
 BaseTrackView[unlighted="true"] > QFrame#topSeparator, BaseTrackView[unlighted="true"] > QFrame#panSectionSeparator{
@@ -701,7 +686,7 @@ BaseTrackView #peaksPanel{
 
 /*
 QPushButton#soloButton, QPushButton#muteButton {
-    border-radius: 2px;
+    border-radius: 3px;
     border: 1px solid gray;
     color: rgba(0, 0, 0, 80);
     padding: 3px 6px 3px 6px;
@@ -710,33 +695,36 @@ QPushButton#soloButton, QPushButton#muteButton {
 */
 
 QPushButton{
-    border-radius: 2px;
-    border: 1px outset gray;
+    border-radius: 1px;
+    border: 1px solid rgb(244, 17, 9, 44);
+
     padding: 3px 6px 3px 6px;
     font-size: 11px;
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-        stop:0 white,
-        stop:0.2 rgba(255, 255, 255, 180),
-        stop:0.7 rgba(255, 255, 255, 180),
-        stop:1 rgba(255,255, 255, 40));
-    color: rgb(60, 60, 60);
+    background-color: rgb(244, 109, 12, 120);
+    color: white;
 }
 
 QPushButton:checked{
     border-style: inset;
-    background-color: rgba(0, 0, 0, 70);
+    background-color: rgb(253, 228, 156);
     color: rgb(0,0,0);
 }
 
 QPushButton:hover{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(0, 0, 0, 60), stop:0.02 rgba(0, 0, 0, 0) stop:0.9 rgba(0,0,0,100));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop:0    rgba(255, 255, 255, 200),
+        stop:0.2 rgb(255, 251, 230),
+        stop:0.7  rgb(255, 251, 230),
+        stop:1    rgb(255, 252, 190));
+
+    /*background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(0, 0, 0, 60), stop:0.02 rgba(0, 0, 0, 0) stop:0.9 rgba(0,0,0,100));*/
     color: black;
 }
 
 QPushButton[enabled="false"]{
-    background: none;
+    background: rgba(0, 0, 0, 2);
     color: rgba(0, 0, 0, 30);
-    border-color: rgba(0, 0, 0, 40);
+    border-color: rgba(0, 0, 0, 20);
 }
 
 QPushButton#soloButton, QPushButton#muteButton{
@@ -781,18 +769,19 @@ color: white;
 /* TRACK GROUPs */
 
 TrackGroupView {
-    border: none;
+    border: 1px solid rgb(255, 225, 155);
     background-color: none;
-    border-radius: 2px;
+    border-radius: 1px;
+    padding: 1px;
 }
 
 TrackGroupView > #topPanel{
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgb(255, 255, 255),
-    stop:0.06 rgb(240, 240, 240),
-    stop:1 rgb(160, 160, 160));
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
+    /*background: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+    stop:0 rgb(245, 245, 245),
+    stop:0.06 rgb(220, 220, 220),
+    stop:1 rgb(100, 100, 100));*/
+    background-color: #FFE6AC;
+    border-radius: 1px;
 }
 
 TrackGroupView[unlighted="true"] > #topPanel  {
@@ -809,7 +798,7 @@ TrackGroupView #groupNameField {
 
 /* LOCAL TRACK GROUP */
 LocalTrackGroupView{
-    border: none;
+    /*border: none;*/
 }
 
 LocalTrackGroupView[highlighted="true"] {
@@ -841,7 +830,7 @@ QLabel#labelPanR, QLabel#labelPanL{
 }
 
 QDial{
-    background: rgb(200, 200, 200);
+    background: rgb(250, 225, 169);
     max-width: 32px;
     max-height: 32px;
 }
@@ -857,7 +846,7 @@ background-color: rgb(180, 180, 180);
 
 /*+++++++++++++++++++++++++++++++++++++++++++++++*/
 LocalTrackView, NinjamTrackView{
-    border: none;
+
 }
 
 LocalTrackView[faderOnly="true"]{
@@ -871,10 +860,8 @@ LocalTrackView[highlighted="true"]{
 
 LocalTrackView #inputPanel{
     padding: 2px;
-    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1,
-    stop:0 rgba(0, 0, 0, 60),
-    stop:1 rgba(0, 0, 0, 90));
-    border-radius: 2px;
+    background-color: qlineargradient(x1:0, y1:0.6, x2:0, y2:1, stop:0 rgba(0, 0, 0, 60), stop:1 rgba(0, 0, 0, 140));
+    border-radius: 1px;
     border: none;
 }
 
@@ -917,7 +904,7 @@ LocalTrackView #inputSelectionButton{
 NinjamRoomWindow #licenceButton{
     background-color: rgba(0, 0, 0, 8);
     border: 1px solid rgba(0, 0,0, 12);
-    border-radius: 2px;
+    border-radius: 1px;
     background-image: url(':/images/licence.png');
     background-position: center center;
     background-repeat: none;
@@ -942,7 +929,7 @@ NinjamTrackView > .QLabel#channelName{
     border: 1px solid rgba(0, 0, 0, 25);
     /*qproperty-alignment: AlignCenter;*/
     background-color: rgba(0, 0, 0, 20);
-    border-radius: 2px;
+    border-radius: 1px;
     padding-top: 3px;
     padding-bottom: 3px;
     font-size: 10px;
@@ -950,16 +937,16 @@ NinjamTrackView > .QLabel#channelName{
 }
 
 NinjamRoomWindow TrackGroupView #groupNameField{
-    border-radius: 2px;
+    border-radius: 1px;
     background-color: rgba(255,255, 255, 120);
-    border-color: #C0C0C0;
+    border-color: rgb(150, 150, 150);
     color: black;
     qproperty-alignment: AlignCenter;
 
 }
 
 NinjamRoomWindow TrackGroupView #countryLabel{
-    color: #727979;
+    color: rgb(210, 210, 210);
     qproperty-alignment: AlignCenter;
     font-size: 11px;
 }
@@ -981,8 +968,8 @@ NinjamRoomWindow TrackGroupView{
         stop:1      rgb(127,127,127)
     );
 
-    border-top-left-radius: 2px;
-    border-top-right-radius: 2px;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 }
 
 
@@ -994,7 +981,7 @@ NinjamRoomWindow TrackGroupView #groupNameField {
 NinjamPanel{
    /*
      background-color: qlineargradient(x1:0, y1:0.55, x2:0, y2:0.99, stop:0 rgba(0,0, 0, 0), stop:0.8 rgba(0, 0, 0, 25), stop:1 rgba(0, 0, 0, 55));
-    border-radius: 2px;
+    border-radius: 3px;
     border: none;
     min-height: 100px;
     border-bottom: 1px solid rgba(0, 0, 0, 50);
@@ -1015,7 +1002,11 @@ NinjamPanel #intervalPanel{/* beats text */
         stop:0.5 rgba(255, 255, 255, 80),
         stop:0.7 rgba(255, 255, 255, 30),
         stop:1 rgba(255,255,255,0));
-
+        /*
+    background-color: qradialgradient(cx:0.5, cy:0.5, radius:0.35, fx:0.5, fy:0.5,
+            stop:0 rgba(255, 255, 255, 100),
+            stop:1 rgba(255, 0, 0, 0));
+            */
 }
 
 NinjamPanel #metronomeControls, NinjamPanel #panelCombos{
@@ -1023,9 +1014,9 @@ NinjamPanel #metronomeControls, NinjamPanel #panelCombos{
     stop:0 rgb(255,255,255),
     stop:0.06 rgb(230, 230, 230)
     stop:0.95 rgb(205, 205, 205),
-    stop:1 rgba(0,0,0,30));
+    stop:1 rgba(0,0,0,60));
 
-    border-radius: 2px;
+    border-radius: 1px;
     border: none;
     border-top: 1px solid rgba(0, 0, 0, 30);
     border-left: 1px solid rgba(0, 0, 0, 30);
@@ -1033,7 +1024,7 @@ NinjamPanel #metronomeControls, NinjamPanel #panelCombos{
 }
 
 NinjamPanel #metronomeControls QSlider::groove:vertical{
-    border: 1px inset rgb(140, 140, 140);
+    border: 1px solid red;
 }
 
 NinjamPanel #metronomeControls QSlider::handle:vertical{
@@ -1055,7 +1046,7 @@ NinjamPanel QComboBox{
     background-repeat: none;
     font-size: 11px;
     color: rgb(50, 50, 50);
-    border-radius: 2px;
+    border-radius: 1px;
     border: 1px solid rgba(0, 0, 0, 40);
     padding: 0px 5px 0px 5px;
 }
@@ -1081,11 +1072,7 @@ ChatPanel > QPushButton#buttonClear{
     background-repeat: no-repeat;
     background-position: center;
     margin-left: 0px;
-    border: 1px outset rgb(130, 130, 130);
-}
-
-#chatText{
-    border: 1px solid #919191;
+    border: 1px outset rgb(100, 100, 100);
 }
 
 ChatMessagePanel > QLabel#labelUserName{
@@ -1093,7 +1080,7 @@ ChatMessagePanel > QLabel#labelUserName{
     padding-right: 3px;
     border: 1px solid rgb(0, 0, 0, 70);
     border-right: none;
-    border-radius: 2px;
+    border-radius: 1px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
     font-size: 11px;
@@ -1105,7 +1092,7 @@ ChatMessagePanel > QLabel#labelUserName{
 ChatMessagePanel > QLabel#labelMessage{
     padding: 2px;
     border: 1px solid rgb(0, 0, 0, 80);
-    border-radius: 2px;
+    border-radius: 1px;
     min-height: 20px;
 }
 
@@ -1118,7 +1105,7 @@ ChatMessagePanel #translateButton{
     padding: 3px;
     border: 1px solid rgb(0, 0, 0, 80);
     border-left: none;
-    border-radius: 2px;
+    border-radius: 1px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     margin-top: 3px;
