fix the vst window problem
Former-commit-id: fa39de53dfe82783921a0ab002940bbdd172b437

--- a/Client/src/resources/jamtaba.qrc
+++ b/Client/src/resources/jamtaba.qrc
@@ -294,6 +294,6 @@
     <qresource prefix="/">
         <file>click.wav</file>
         <file>loading.gif</file>
-        <file>../../Standalone/qtlogging.ini</file>
+        <file>qtlogging.ini</file>
     </qresource>
 </RCC>
