improvamente in QDial
Former-commit-id: 5e15c0b5a948375c02c20ceb9662e51de744a1c7

--- a/Client/src/gui/BaseTrackView.ui
+++ b/Client/src/gui/BaseTrackView.ui
@@ -67,6 +67,9 @@
         <property name="tracking">
          <bool>false</bool>
         </property>
+        <property name="wrapping">
+         <bool>false</bool>
+        </property>
         <property name="notchesVisible">
          <bool>false</bool>
         </property>
